:sparkles: feat: Criado metodos de verificação de Reserva e Worker